hphp/hack/test/typecheck/using/using_bad_syntax_3.php.exp
File "using_bad_syntax_3.php", line 19, characters 5-9:
Parse error: function-scoped 'using' statement not supported in a block scope (Parsing[1002])
